--- a/src/components/button.css
+++ b/src/components/button.css
@@ -29,6 +29,11 @@
     color: #fff;
 }
 
+.btn--super:hover {
+    background-color: #6166B3;
+    color: #DD4A48;
+}
+
 .btn--medium {
     padding: 8px 20px;
     font-size: 20px;
