--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -91,6 +91,19 @@
     color: #b1b1b1;
 }
 
+.btn--outline {
+    background-color: transparent;
+    color: rgb(245, 29, 29);
+    padding: 8px 20px;
+    border: 1px solid var(--primary);
+    transition: all 0.3s ease-out;
+}
+
+.btn--outline:hover {
+    background-color: rgb(245, 29, 29);
+    color: #fff;
+}
+
 
 /* Social Icons */
 
