--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient( to right, #ffffff 0%, #ffffff 50%, #95D1CC 50%, #95D1CC 100%);
+    background: linear-gradient( to left, #ffffff 0%, #ffffff 50%, #95D1CC 50%, #95D1CC 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -99,6 +99,9 @@
 
 .menu-icon {
     display: none;
+    background-color: #242424;
+    padding: .5%;
+    border-radius: 3%;
 }
 
 @media screen and (max-width: 960px) {
