--- a/src/components/pages/page.css
+++ b/src/components/pages/page.css
@@ -5,6 +5,13 @@
     color: cornflowerblue;
 }
 
+.sign {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: cornflowerblue;
+}
+
 .service {
     background-position: center;
     background-size: 140%;
@@ -40,14 +47,21 @@
     color: cornflowerblue;
 }
 
+h2 {
+    text-align: center;
+    padding: 3%;
+}
+
 .home,
 .about,
 .service,
 .contacts,
 .emergency,
 .result,
-.RESULTBody {
+.RESULTBody,
+.sign {
     justify-content: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: linear-gradient( to right, #ffffff 0%, #ffffff 50%, #95D1CC 50%, #95D1CC 100%);
 }
 
@@ -57,7 +71,7 @@
 .contacts,
 .emergency,
 .RESULTBody p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .about .about-txt {
@@ -85,6 +99,14 @@
 .mainAbout img {
     width: 20%;
     margin-right: 5%;
+}
+
+.btn--super {
+    background-color: #DD4A48;
+    color: #fff;
+    padding: 8px 20px;
+    border: 1px solid #242424;
+    transition: all 0.3s ease-out;
 }
 
 @media screen and (max-width: 820px) {
